PROJECT(HttpServer)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#SETS
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")

#LIBEVENT
FIND_PATH(EVENT_INCLUDE_DIR event2/event.h
  PATHS /usr/include /usr/local/include
)

FIND_LIBRARY(EVENT_LIBRARY
  NAMES event
  PATHS /usr/lib /usr/local/lib
)

INCLUDE(FindPackageHandleStandardArgs)

FIND_PACKAGE_HANDLE_STANDARD_ARGS(event
  EVENT_INCLUDE_DIR
  EVENT_LIBRARY
)

INCLUDE_DIRECTORIES(${EVENT_INCLUDE_DIR})

#SERVER
ADD_EXECUTABLE(HttpServer HttpServer.cpp)
TARGET_LINK_LIBRARIES(HttpServer event)

